# contextkit

./: .gitignore  LICENSE  QWEN.md  README.md  ai_memory_tool.py  contextkit.py  pyproject.toml
.ai/: CONTEXT.md  DECISIONS.md  DESIGN.md  LESSONS.md  MEMORY.md  PATTERNS.md  README.md  RELEASE.md  REQUIREMENTS.md  TASKS.md  TESTING.md  maintain-plan.json  maintain-plan.schema.json
.ai/archive/: metrics.json
contextkit/: __init__.py  __main__.py  cli.py  commands.py  compress.py  files.py  maintain.py
templates/: CONTEXT.md  DECISIONS.md  LESSONS.md  PATTERNS.md  README.md  TASKS.md
tests/: test_cli.py  test_files.py
