[project]
name = "contextkit"
version = "0.3.1"
description = "LLM-powered project memory system for AI coding agents (.ai/ files)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ContextKit contributors" }]
keywords = ["ai", "cli", "memory", "qwen"]

[project.scripts]
contextkit = "contextkit:cli"

[tool.black]
line-length = 100
target-version = ["py310"]
